# snaq-verify

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  eval_report.json  pyproject.toml  verification_report.json
docs/: conversation_log.txt
src/snaq_verify/: __init__.py  bootstrap.py
src/snaq_verify/application/pipeline/: runner.py
src/snaq_verify/application/tools/: check_atwater_consistency.py  compute_per_nutrient_delta.py  format_human_summary.py  get_usda_food.py  lookup_off_by_barcode.py  score_candidate_match.py  search_off_by_name.py  search_usda.py  select_best_candidate.py  verdict_from_deltas.py  web_search_nutrition.py
src/snaq_verify/cli/: diff_runs.py  main.py
src/snaq_verify/core/: config.py
src/snaq_verify/domain/models/: atwater_check.py  enums.py  eval_models.py  food_item.py  item_verification.py  nutrient_comparison.py  pipeline_state.py  source_lookup.py  verification_report.py
src/snaq_verify/domain/ports/: cache_port.py  judge_agent_port.py  logger_port.py  open_food_facts_client_port.py  pipeline_step_port.py  tavily_client_port.py  usda_client_port.py  verifier_agent_port.py
src/snaq_verify/infrastructure/agents/: judge_agent.py  judge_agent_adapter.py  verifier_agent.py  verifier_agent_adapter.py
src/snaq_verify/infrastructure/cache/: file_cache.py  in_memory_cache.py
tests/data/: ground_truth.json
tests/data/fixtures/: usda_food_171477.json  usda_food_chicken_breast_raw_synthetic.json  usda_food_missing_nutrients.json  usda_search_chicken_breast.json  usda_search_chicken_breast_synthetic.json
tests/fakes/: factories.py  fake_cache.py  fake_judge_agent.py  fake_logger.py  fake_open_food_facts_client.py  fake_tavily_client.py  fake_usda_client.py  fake_verifier_agent.py
(+47 files in other folders)
